--- a/index.html
+++ b/index.html
@@ -366,10 +366,11 @@
       </div>
     </div>
 
+    <!-- Tesseract.js pour la reconnaissance OCR -->
+    <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
     <script src="js/data.js"></script>
     <script src="js/members.js"></script>
     <script src="js/keys.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
-
